# basic-clap-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: gui.cpp  main.cpp  parameters.h  plugin.cpp  plugin.h  plugin_entry.cpp  utils.h
